# ggnss

./: .gitignore  .travis.yml  configure.ac
doc/notes/: ggnss.tex  notes.html  notes.tex
src/: Makefile.am  Makefile.am.production  antenna.cpp  antenna.hpp  antenna_pcv.cpp  antenna_pcv.hpp  antex.cpp  antex.hpp  bdsnav.cpp  bern_utils.cpp  bern_utils.hpp  galnav.cpp  gauss_newton.hpp  glonav.cpp  gnssobs.cpp  gnssobs.hpp  gnssobsrv.cpp  gnssobsrv.hpp  gpsnav.cpp  navcmp.cpp  navrnx.cpp  navrnx.hpp  nvarstr.cpp  nvarstr.hpp  obsrnx.cpp  obsrnx.hpp  rinex.hpp  satellite.cpp  satellite.hpp  satsys.cpp  satsys.hpp  sp3c.cpp  sp3c.hpp
test/: Makefile.am  pp_rnx.cpp  testGloNavJ12.cpp  test_antenna.cpp  test_antex.cpp  test_bern_SATELLIT.cpp  test_gnssobs.cpp  test_gnssobsrv.cpp  test_navrnx.cpp  test_navrnx_C.cpp  test_navrnx_E.cpp  test_navrnx_G.cpp  test_navrnx_R.cpp  test_obsrnx.cpp  test_obsrnx_init.cpp  test_sp3.cpp
var/: cpp_char2num.cpp  cpp_str2doubles.cpp  cpp_string_trim.cc  gplot_orbfiles.sh  pasteoncol.py  sp3py.py
